Add music/singing interest and YouTube link

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -20,6 +20,7 @@ email: erin.maria.johnson+website@gmail.com # your email address
 # hal_id: # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
 # inspirehep_id: # Inspire HEP author ID
+youtube_id: erinjohnson3843 # your youtube channel id (youtube.com/@<youtube_id>)
 # instagram_id: # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
