--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -21,7 +21,7 @@ email: erin.maria.johnson+website@gmail.com # your email address
 # ieee_id: # your ieeexplore.ieee.org/author/id
 # inspirehep_id: # Inspire HEP author ID
 youtube_id: erinjohnson3843 # your youtube channel id (youtube.com/@<youtube_id>)
-# instagram_id: # your instagram id
+instagram_id: erin.m.johnson_ # your instagram id
 # kaggle_id: # your kaggle id
 # keybase_username: # your keybase user name
 # lastfm_id: # your lastfm id
